--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       href="/src/assets/imgs/logo_no_bg.ico"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Israelify</title>
   </head>
 
   <body>
