added sharing image

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       href="/src/assets/imgs/logo_no_bg.ico"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- add thumbnail pic when sharing -->
+    <meta property="og:image" content="/src/assets/imgs/logo-Blue3D.png" />
     <title>Israelify</title>
   </head>
 
